[package]
name = "cyw43-pio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyw43 = { git = "https://github.com/embassy-rs/cyw43", rev = "c19de2984751ba6fa2972ee66cfa2a6310d5f0c1",  features = ["defmt", "firmware-logs"] }
embassy-rp = { version = "0.1.0",  features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
pio-proc = "0.2"
pio = "0.2.1"
defmt = "0.3"